refactor app backend

--- a/templates/pages/scrap.html
+++ b/templates/pages/scrap.html
@@ -2,7 +2,6 @@
 content %}
 <h1>WP Scrap tool</h1>
 <p>Scrap domain</p>
-<div class="" id="domainResult"></div>
 <div class="card">
   <h2>Scraper</h2>
   <div style="margin-top: 20px">
@@ -34,5 +33,7 @@ content %}
       <button type="submit" class="btn-primary">Enviar</button>
     </div>
   </form>
+  <div id="domainResult">
+  </div>
 </div>
 {% endblock %}
