refactor app front

--- a/templates/pages/scrap.html
+++ b/templates/pages/scrap.html
@@ -33,7 +33,7 @@ content %}
       <button type="submit" class="btn-primary">Enviar</button>
     </div>
   </form>
-  <div id="domainResult">
+  <div style="padding: 20px;" id="domainResult">
   </div>
 </div>
 {% endblock %}
