--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,11 @@
     {% include 'partials/footer.html' %}
     <!-- jQuery CDN and app script -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <!-- Modular JS: utils and components loaded before main entrypoint -->
+    <script src="/static/js/utils/ajax.js"></script>
+    <script src="/static/js/utils/validation.js"></script>
+    <script src="/static/js/components/modal.js"></script>
+    <script src="/static/js/components/domainForm.js"></script>
     <script src="/static/main.js"></script>
   </body>
 </html>
