--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -12,7 +12,7 @@
 
 <!-- Recent Domains -->
 <div class="card">
-  <div class="card-header">
+  <div class="card-header-home">
     <h4>🌐 Dominios Recientes</h4>
   </div>
   <div class="card-body">
@@ -24,7 +24,7 @@
 
 <!-- Recent Comments -->
 <div class="card">
-  <div class="card-header">
+  <div class="card-header-home">
     <h4>💬 Comentarios Recientes</h4>
   </div>
   <div class="card-body">
@@ -36,7 +36,7 @@
 
 <!-- Quick Actions -->
 <div class="card">
-  <div class="card-header">
+  <div class="card-header-home">
     <h4>⚡ Accesos Rápidos</h4>
   </div>
   <div class="card-body">
