fix scrap en lote y avances con ui de reportes IA

--- a/static/style.css
+++ b/static/style.css
@@ -647,11 +647,21 @@ textarea {
 /* --------------------------------------------------------------
    Utility classes
    -------------------------------------------------------------- */
-
-.mt-2 {
-  margin-top: 12px;
-}
-
-.hidden {
-  display: none !important;
+   
+   .mt-2 {
+     margin-top: 12px;
+    }
+    
+    .hidden {
+      display: none !important;
+    }
+    
+    
+/* --------------------------------------------------------------
+    reports
+    -------------------------------------------------------------- */
+.gerenate-report-container{
+  display: flex;
+  justify-content: center;
+  gap: 12px;
 }
