--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
     {% include 'partials/footer.html' %}
     <!-- jQuery CDN and app script -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <!-- Modular JS: utils and components loaded before main entrypoint -->
     <script src="/static/js/utils/ajax.js"></script>
     <script src="/static/js/utils/validation.js"></script>
