--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -9,6 +9,7 @@
         <a href="/domains" style="color: var(--text); text-decoration: none; font-size: 0.95rem;">Dominios</a>
         <a href="/jobs" style="color: var(--text); text-decoration: none; font-size: 0.95rem;">Jobs</a>
         <a href="/scrap" style="color: var(--text); text-decoration: none; font-size: 0.95rem;">Analizar</a>
+        <a href="/settings" style="color: var(--text); text-decoration: none; font-size: 0.95rem;">Configuración</a>
       </div>
     </div>
   </nav>
